<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/iv_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@mipmap/bg_record_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/iv_panel"
        app:layout_constraintStart_toStartOf="@+id/iv_panel"
        app:layout_constraintTop_toTopOf="@id/iv_panel">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_bp_data"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/no_bp_data_tips"
            android:textColor="#486D78"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@mipmap/btn_bg"
            android:text="@string/enter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/record_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="18dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/iv_panel"
        app:layout_constraintStart_toStartOf="@+id/iv_panel"
        app:layout_constraintTop_toTopOf="@id/iv_panel">

        <TextView
            android:id="@+id/tv_record_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Latest Record"
            android:textColor="@color/color_122f40"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tv_systolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="100"
                android:textColor="@color/color_122f40"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_diastolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="78"
                android:textColor="@color/color_122f40"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_pulse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="20"
                android:textColor="@color/color_122f40"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_systolic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Systolic"
                android:textColor="@color/color_486d78"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_systolic"
                app:layout_constraintStart_toStartOf="@+id/tv_systolic"
                app:layout_constraintTop_toBottomOf="@+id/tv_systolic" />

            <TextView
                android:id="@+id/tv_diastolic_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diastolic"
                android:textColor="@color/color_486d78"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_diastolic"
                app:layout_constraintStart_toStartOf="@+id/tv_diastolic"
                app:layout_constraintTop_toBottomOf="@+id/tv_diastolic" />

            <TextView
                android:id="@+id/tv_pulse_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pulse"
                android:textColor="@color/color_486d78"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_pulse"
                app:layout_constraintStart_toStartOf="@+id/tv_pulse"
                app:layout_constraintTop_toBottomOf="@+id/tv_pulse" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(mmHg)"
                android:textColor="@color/color_486d78"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_systolic_title"
                app:layout_constraintStart_toStartOf="@+id/tv_systolic_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_systolic_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(mmHg)"
                android:textColor="@color/color_486d78"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_diastolic_title"
                app:layout_constraintStart_toStartOf="@+id/tv_diastolic_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_diastolic_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(BPM)"
                android:textColor="@color/color_486d78"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_pulse_title"
                app:layout_constraintStart_toStartOf="@+id/tv_pulse_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_pulse_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp">

            <ImageButton
                android:id="@+id/btn_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:src="@mipmap/btn_history"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@mipmap/btn_bg"
                android:text="@string/new_record"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>